<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpOrIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        app:srcCompat="@drawable/ic_welcome_rafiki" />

    <TextView
        android:id="@+id/loginOrSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/logorsign_ttl"
        android:textColor="#FE3939"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/asstu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginRight="30dp"
            android:text="@string/signUp" />


        <Button
            android:id="@+id/asFac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/signIn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or"
            android:textAlignment="center"
            android:textSize="20dp" />

        <Button
            android:id="@+id/asAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/signInAdmin" />
    </LinearLayout>

</LinearLayout>