<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminPassUptDailogActivity">
    <EditText
        android:id="@+id/adminOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/adminNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/adminCngPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/UptPass" />
</LinearLayout>

