<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homeScreen2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        app:srcCompat="@drawable/ic_teacher_student_rafiki" />

    <TextView
        android:id="@+id/loginOrSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/home2_ttl"
        android:textColor="#FE3939"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/homeScreen3"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="50dp"
            android:text="@string/next"
            app:icon="@drawable/ic_baseline_keyboard_arrow_right_24" />
    </LinearLayout>

</LinearLayout>